tests/paczka2/big_fuzzy/19707394.err
Error in line 10: 7EGX4dY A741 58,90
Error in line 6: 7EGX4dY A741 47,9
Error in line 20: G6STiwP11 S417 1,33
Error in line 23: A741 A741 263,50
Error in line 9: A741 A741 85,4
Error in line 34: 5f3lqS44aa A801 2,5
Error in line 16: G6STiwP11 A801 252,6
Error in line 33: HEESyDlKlWS A801 86,6
Error in line 18: 7EGX4dY A801 36,6
Error in line 49: 5f3lqS44aa A741 31,2
Error in line 54: 5f3lqS44aa A678 87,9
Error in line 62: 4Ls2 A678 53,7
Error in line 65: 5f3lqS44aa A741 69,0
Error in line 69: 5f3lqS44aa A678 48,6
Error in line 71: Sr3c A741 340,1
Error in line 74: Sr3c S417 3,2
Error in line 78: àA678
Error in line 72: 5f3lqS44aa A741 54,7
Error in line 76: Sr3c A801 73,0
Error in line 80: 5f3lqS44aa A678 76,3
Error in line 95: Sr3c S417 16,3
Error in line 52: G6STiwP11 A741 315,6
Error in line 115: G6STiwP11 S417 77,0
Error in line 116: HEESyDlKlWS A801 463,1
Error in line 128: HEESyDlKlWS S417 944,4
Error in line 131: HEESyDlKlWS A678 82,7
Error in line 143: 7EGX4dY A678 39,7
Error in line 157: A741 A801 2,0
Error in line 168: G6STiwP11 A678 75,2
Error in line 167: 7EGX4dY A678 27,4
Error in line 185: HEESyDlKlWS A678 13,5
Error in line 188: 5f3lqS44aa A678 7,2
Error in line 198: 5f3lqS44aa S417 50,4
Error in line 201: 7EGX4dY A801 65,4
Error in line 205: 7EGX4dY S417 60,3
Error in line 216: 5f3lqS44aa A741 12,8
Error in line 222: A741 A678 63,7
Error in line 226: A741 A741 18,8
Error in line 231: A741 A678 145,0
Error in line 234: A741 A741 17,4
Error in line 237: Sr3c S417 24,2
Error in line 240: Sr3c A801 18,2
